# RoboticsTask2

install/: local_setup.sh  setup.sh
install/cmake_helpers/share/cmake_helpers/: package.sh
install/game_engine/share/game_engine/: local_setup.sh  package.sh
install/manager_utils/share/manager_utils/: package.sh
install/resource_builder/lib/resource_builder/: resource_builder
install/resource_builder/share/resource_builder/: local_setup.sh  package.sh
install/resource_utils/share/resource_utils/: package.sh
install/robo_cleaner_common/share/robo_cleaner_common/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
install/robo_cleaner_gui/lib/robo_cleaner_gui/: robo_cleaner_gui
install/robo_cleaner_gui/share/robo_cleaner_gui/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.sh  package.xml
log/: latest_build  latest_list
src/robo_collector/install/: local_setup.sh  setup.sh
src/robo_collector/log/: latest_build
src/robo_miner/install/: local_setup.sh  setup.sh
src/robo_miner/log/: latest_build
src/robo_miner/robo_miner_controller/: CMakeLists.txt
src/robo_miner/robo_miner_controller/include/robo_miner_controller/Application1/: Application1.hpp
src/robo_miner/robo_miner_controller/include/robo_miner_controller/FieldType/: Fieldtype.hpp
src/robo_miner/robo_miner_controller/include/robo_miner_controller/MapNode/: MapNode.hpp
src/robo_miner/robo_miner_controller/include/robo_miner_controller/MapNodeFields/: MapNodeFields.hpp
src/robo_miner/robo_miner_controller/include/robo_miner_controller/RobotMoveLogistics/: 123.txt  RobotMoveLogistics.hpp
src/robo_miner/robo_miner_controller/src/: robo_miner_controller.cpp
src/robo_miner/robo_miner_interfaces/: CMakeLists.txt
(+1177 files in other folders)
